--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          cd algamlib
+          pip install -qr requirements.txt
           pip install .
 
       - name: Run tests
         run: |
-          pip install -r requirements-test.txt
-          pytest
+          python -m pip install --upgrade pip
+          cd algamlib
+          pip install -qr requirements-test.txt
+          pytest tests/*.py
