--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -55,6 +55,9 @@ jobs:
           python-version: 3.9
 
       - name: Run tests
+        env:
+          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
         run: |
           python -m pip install --upgrade pip
           cd algamlib
