Backend Workflow Fix

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Start FastAPI server
         run: |
+          cd backend
           nohup uvicorn main:app &
           sleep 5
 
